add camera and world

--- a/robot_pnp/config/robot_control.yaml
+++ b/robot_pnp/config/robot_control.yaml
@@ -14,6 +14,14 @@ arm_initial_positions:
   - 1.58
   - 1.51
 
+arm_scanning_positions:
+  - 1.256637
+  - -1.884956
+  - -0.502655
+  - 1.382301
+  - 1.58
+  - 1.51
+
 gripper_joint_names:
   - finger_joint
 
