--- a/robot_pnp/config/gripper_controller.yaml
+++ b/robot_pnp/config/gripper_controller.yaml
@@ -10,6 +10,21 @@ gripper_controller:
   state_publish_rate:  25
   action_monitor_rate: 10
 
+# gripper_controller:
+#   type: effort_controllers/JointTrajectoryController
+#   joints:
+#     - finger_joint
+#   gains: # Required because we're controlling an effort interface
+#     finger_joint: {p: 100,  d: 20, i: 1, i_clamp: 1}
+#   constraints:
+#     goal_time: 0.2
+#     stopped_velocity_tolerance: 0.05
+#     finger_joint: {trajectory: 0.1, goal: 0.1}
+#   stop_trajectory_duration: 0.5
+#   state_publish_rate: 25
+#   action_monitor_rate: 10
+
+
   ## joint_state_controller
 gripper_joint_state_controller:
     type: joint_state_controller/JointStateController
