--- a/universal_robot/ur5e_moveit_config/config/joint_limits.yaml
+++ b/universal_robot/ur5e_moveit_config/config/joint_limits.yaml
@@ -4,31 +4,43 @@
 joint_limits:
   elbow_joint:
     has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    min_velocity: !degrees  330.0
+    max_velocity: !degrees  360.0
+    has_acceleration_limits: true
+    min_acceleration: 4
+    max_acceleration: 5
   shoulder_lift_joint:
     has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    min_velocity: !degrees  330.0
+    max_velocity: !degrees  360.0
+    has_acceleration_limits: true
+    min_acceleration: 4
+    max_acceleration: 5
   shoulder_pan_joint:
     has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    min_velocity: !degrees  330.0
+    max_velocity: !degrees  360.0
+    has_acceleration_limits: true
+    min_acceleration: 4
+    max_acceleration: 5
   wrist_1_joint:
     has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    min_velocity: !degrees  330.0
+    max_velocity: !degrees  360.0
+    has_acceleration_limits: true
+    min_acceleration: 4
+    max_acceleration: 5
   wrist_2_joint:
     has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    min_velocity: !degrees  330.0
+    max_velocity: !degrees  360.0
+    has_acceleration_limits: true
+    min_acceleration: 4
+    max_acceleration: 5
   wrist_3_joint:
     has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    min_velocity: !degrees  330.0
+    max_velocity: !degrees  360.0
+    has_acceleration_limits: true
+    min_acceleration: 4
+    max_acceleration: 5
