--- a/robot_pnp/package.xml
+++ b/robot_pnp/package.xml
@@ -62,5 +62,6 @@
   <export>
     <!-- Other tools can request additional information be placed here -->
     <service name="PointArray"/>
+    <service name="NumModel"/>
   </export>
 </package>
